--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -270,6 +270,14 @@
             <div class="card-body"> پخش زنده <br><strong>شبکه من و تو</strong></div>
         </a>
     </div>
+    <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
+        <a title="ifilmAr" href="/player/bbc">
+            <img src="https://nav.files.bbci.co.uk/orbit/2.0.0-522.0b452914/img/blq-orbit-blocks_grey.svg"
+                 alt="iFilm Arabic"
+                 width="130px" vspace="44px">
+            <div class="card-body"> پخش زنده <br><strong>شبکه BBC</strong></div>
+        </a>
+    </div>
 </div>
 </body>
 </html>
