--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -21,261 +21,269 @@
         <a title="tv1" href="/player/tv1">
             <img src="https://static.televebion.net/web/images/../content_images/channel_images/thumbs/new/240/v4/tv1.png"
                  alt="شبکه ۱">
-            <div class="card-body"> پخش زنده <br><strong>شبکه ۱</strong></div>
+            <div class="card-body"><strong>شبکه ۱</strong></div>
         </a>
     </div>
     <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
         <a title="tv2" href="/player/tv2">
             <img src="https://static.televebion.net/web/images/../content_images/channel_images/thumbs/new/240/v4/tv2.png"
                  alt="شبکه ۲">
-            <div class="card-body"> پخش زنده <br><strong>شبکه ۲</strong></div>
+            <div class="card-body"><strong>شبکه ۲</strong></div>
         </a>
     </div>
     <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
         <a title="tv3" href="/player/tv3">
             <img src="https://static.televebion.net/web/images/../content_images/channel_images/thumbs/new/240/v4/tv3.png"
                  alt="شبکه ۳">
-            <div class="card-body"> پخش زنده <br><strong>شبکه ۳</strong></div>
+            <div class="card-body"><strong>شبکه ۳</strong></div>
         </a>
     </div>
     <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
         <a title="tv4" href="/player/tv4">
             <img src="https://static.televebion.net/web/images/../content_images/channel_images/thumbs/new/240/v4/tv4.png"
                  alt="شبکه ۴">
-            <div class="card-body"> پخش زنده <br><strong>شبکه ۴</strong></div>
+            <div class="card-body"><strong>شبکه ۴</strong></div>
         </a>
     </div>
     <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
         <a title="tehran" href="/player/tehran"><img
                 src="https://static.televebion.net/web/images/../content_images/channel_images/thumbs/new/240/v4/tehran.png"
                 alt="شبکه ۵">
-            <div class="card-body"> پخش زنده <br><strong>شبکه ۵</strong></div>
+            <div class="card-body"><strong>شبکه ۵</strong></div>
         </a>
     </div>
     <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
         <a title="irinn" href="/player/irinn"><img
                 src="https://static.televebion.net/web/images/../content_images/channel_images/thumbs/new/240/v4/irinn.png"
                 alt="خبر">
-            <div class="card-body"> پخش زنده <br><strong>شبکه خبر</strong></div>
+            <div class="card-body"><strong>شبکه خبر</strong></div>
         </a>
     </div>
     <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
         <a title="shijam" href="/player/shijam"><img
                 src="https://static.televebion.net/web/images/../content_images/channel_images/thumbs/new/240/v4/shijam.png"
                 alt="شی جام">
-            <div class="card-body"> پخش زنده <br><strong>شبکه شی جام</strong></div>
+            <div class="card-body"><strong>شبکه شی جام</strong></div>
         </a>
     </div>
     <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
         <a title="nasim" href="/player/nasim">
             <img src="https://static.televebion.net/web/images/../content_images/channel_images/thumbs/new/240/v4/nasim.png"
                  alt="نسیم">
-            <div class="card-body"> پخش زنده <br><strong>شبکه نسیم</strong></div>
+            <div class="card-body"><strong>شبکه نسیم</strong></div>
         </a>
     </div>
     <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
         <a title="shinama" href="/player/shinama">
             <img src="https://static.televebion.net/web/images/../content_images/channel_images/thumbs/new/240/v4/shinama.png"
                  alt="شی نما">
-            <div class="card-body"> پخش زنده <br><strong>شبکه شی نما</strong></div>
+            <div class="card-body"><strong>شبکه شی نما</strong></div>
         </a>
     </div>
     <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
         <a title="varzesh" href="/player/varzesh">
             <img src="https://static.televebion.net/web/images/../content_images/channel_images/thumbs/new/240/v4/varzesh.png"
                  alt="ورزش">
-            <div class="card-body"> پخش زنده <br><strong>شبکه ورزش</strong></div>
+            <div class="card-body"><strong>شبکه ورزش</strong></div>
         </a>
     </div>
     <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
         <a title="pooya" href="/player/pooya">
             <img src="https://static.televebion.net/web/images/../content_images/channel_images/thumbs/new/240/v4/pooya.png"
                  alt="پویا">
-            <div class="card-body"> پخش زنده <br><strong>شبکه پویا</strong></div>
+            <div class="card-body"><strong>شبکه پویا</strong></div>
         </a>
     </div>
     <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
         <a title="ifilm" href="/player/ifilm">
             <img src="https://static.televebion.net/web/images/../content_images/channel_images/thumbs/new/240/v4/ifilm.png"
                  alt="IFilm">
-            <div class="card-body"> پخش زنده <br><strong>شبکه IFilm</strong></div>
+            <div class="card-body"><strong>شبکه IFilm</strong></div>
         </a>
     </div>
     <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
         <a title="shinamak" href="/player/shinamak">
             <img src="https://static.televebion.net/web/images/../content_images/channel_images/thumbs/new/240/v4/shinamak.png"
                  alt="شی نمک">
-            <div class="card-body"> پخش زنده <br><strong>شبکه شی نمک</strong></div>
+            <div class="card-body"><strong>شبکه شی نمک</strong></div>
         </a>
     </div>
     <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
         <a title="namayesh" href="/player/namayesh">
             <img src="https://static.televebion.net/web/images/../content_images/channel_images/thumbs/new/240/v4/namayesh.png"
                  alt="نمایش">
-            <div class="card-body"> پخش زنده <br><strong>شبکه نمایش</strong></div>
+            <div class="card-body"><strong>شبکه نمایش</strong></div>
         </a>
     </div>
     <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
         <a title="sepehr" href="/player/sepehr">
             <img src="https://static.televebion.net/web/images/../content_images/channel_images/thumbs/new/240/v4/sepehr.png"
                  alt="سپهر">
-            <div class="card-body"> پخش زنده <br><strong>شبکه سپهر</strong></div>
+            <div class="card-body"><strong>شبکه سپهر</strong></div>
         </a>
     </div>
     <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
         <a title="shiran" href="/player/shiran">
             <img src="https://static.televebion.net/web/images/../content_images/channel_images/thumbs/new/240/v4/shiran.png"
                  alt="شیران">
-            <div class="card-body"> پخش زنده <br><strong>شبکه شیران</strong></div>
+            <div class="card-body"><strong>شبکه شیران</strong></div>
         </a>
     </div>
     <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
         <a title="mostanad" href="/player/mostanad">
             <img src="https://static.televebion.net/web/images/../content_images/channel_images/thumbs/new/240/v4/mostanad.png"
                  alt="مستند سیما">
-            <div class="card-body"> پخش زنده <br><strong>شبکه مستند </strong></div>
+            <div class="card-body"><strong>شبکه مستند </strong></div>
         </a>
     </div>
     <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
         <a title="amouzesh" href="/player/amouzesh">
             <img src="https://static.televebion.net/web/images/../content_images/channel_images/thumbs/new/240/v4/amouzesh.png"
                  alt="آموزش">
-            <div class="card-body"> پخش زنده <br><strong>شبکه آموزش</strong></div>
+            <div class="card-body"><strong>شبکه آموزش</strong></div>
         </a>
     </div>
     <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
         <a title="quran" href="/player/quran">
             <img src="https://static.televebion.net/web/images/../content_images/channel_images/thumbs/new/240/v4/quran.png"
                  alt="قرآن">
-            <div class="card-body"> پخش زنده <br><strong>شبکه قرآن</strong></div>
+            <div class="card-body"><strong>شبکه قرآن</strong></div>
         </a>
     </div>
     <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
         <a title="salamat" href="/player/salamat">
             <img src="https://static.televebion.net/web/images/../content_images/channel_images/thumbs/new/240/v4/salamat.png"
                  alt="سلامت">
-            <div class="card-body"> پخش زنده <br><strong>شبکه سلامت</strong></div>
+            <div class="card-body"><strong>شبکه سلامت</strong></div>
         </a>
     </div>
     <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
         <a title="jjtv1" href="/player/jjtv1">
             <img src="https://static.televebion.net/web/images/../content_images/channel_images/thumbs/new/240/v4/jjtv1.png"
                  alt="جام جم ۱">
-            <div class="card-body"> پخش زنده <br><strong>شبکه جام جم ۱</strong></div>
+            <div class="card-body"><strong>شبکه جام جم ۱</strong></div>
         </a>
     </div>
     <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
         <a title="hdtest" href="/player/hdtest">
             <img src="https://static.televebion.net/web/images/../content_images/channel_images/thumbs/new/240/v4/hdtest.png"
                  alt="تماشا">
-            <div class="card-body"> پخش زنده <br><strong>شبکه تماشا</strong></div>
+            <div class="card-body"><strong>شبکه تماشا</strong></div>
         </a>
     </div>
     <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
         <a title="omid" href="/player/omid">
             <img src="https://static.televebion.net/web/images/../content_images/channel_images/thumbs/new/240/v4/omid.png"
                  alt="امید">
-            <div class="card-body"> پخش زنده <br><strong>شبکه امید</strong></div>
+            <div class="card-body"><strong>شبکه امید</strong></div>
         </a>
     </div>
     <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
         <a title="ofogh" href="/player/ofogh">
             <img src="https://static.televebion.net/web/images/../content_images/channel_images/thumbs/new/240/v4/ofogh.png"
                  alt="افق">
-            <div class="card-body"> پخش زنده <br><strong>شبکه افق</strong></div>
+            <div class="card-body"><strong>شبکه افق</strong></div>
         </a>
     </div>
     <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
         <a title="shoma" href="/player/shoma">
             <img src="https://static.televebion.net/web/images/../content_images/channel_images/thumbs/new/240/v4/shoma.png"
                  alt="شما">
-            <div class="card-body"> پخش زنده <br><strong>شبکه شما</strong></div>
+            <div class="card-body"><strong>شبکه شما</strong></div>
         </a>
     </div>
     <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
         <a title="esfahan" href="/player/esfahan">
             <img src="https://static.televebion.net/web/images/../content_images/channel_images/thumbs/new/240/v4/esfahan.png"
                  alt="اصفهان">
-            <div class="card-body"> پخش زنده <br><strong>شبکه اصفهان</strong></div>
+            <div class="card-body"><strong>شبکه اصفهان</strong></div>
         </a>
     </div>
     <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
         <a title="sahand" href="/player/sahand">
             <img src="https://static.televebion.net/web/images/../content_images/channel_images/thumbs/new/240/v4/sahand.png"
                  alt="سهند">
-            <div class="card-body"> پخش زنده <br><strong>شبکه سهند</strong></div>
+            <div class="card-body"><strong>شبکه سهند</strong></div>
         </a>
     </div>
     <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
         <a title="fars" href="/player/fars">
             <img src="https://static.televebion.net/web/images/../content_images/channel_images/thumbs/new/240/v4/fars.png"
                  alt="فارس">
-            <div class="card-body"> پخش زنده <br><strong>شبکه فارس</strong></div>
+            <div class="card-body"><strong>شبکه فارس</strong></div>
         </a>
     </div>
     <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
         <a title="khoozestan" href="/player/khoozestan">
             <img src="https://static.televebion.net/web/images/../content_images/channel_images/thumbs/new/240/v4/khoozestan.png"
                  alt="خوزستان">
-            <div class="card-body"> پخش زنده <br><strong>شبکه خوزستان</strong></div>
+            <div class="card-body"><strong>شبکه خوزستان</strong></div>
         </a>
     </div>
     <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
         <a title="khorasanrazavi" href="/player/khorasanrazavi">
             <img src="https://static.televebion.net/web/images/../content_images/channel_images/thumbs/new/240/v4/khorasanrazavi.png"
                  alt="خراسان رضوی">
-            <div class="card-body"> پخش زنده <br><strong>شبکه خراسان </strong></div>
+            <div class="card-body"><strong>شبکه خراسان </strong></div>
         </a>
     </div>
     <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
         <a title="kordestan" href="/player/kordestan">
             <img src="https://static.televebion.net/web/images/../content_images/channel_images/thumbs/new/240/v4/kordestan.png"
                  alt="کردستان">
-            <div class="card-body"> پخش زنده <br><strong>شبکه کردستان</strong></div>
+            <div class="card-body"><strong>شبکه کردستان</strong></div>
         </a>
     </div>
     <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
         <a title="baran" href="/player/baran">
             <img src="https://static.televebion.net/web/images/../content_images/channel_images/thumbs/new/240/v4/baran.png"
                  alt="باران">
-            <div class="card-body"> پخش زنده <br><strong>شبکه باران</strong></div>
+            <div class="card-body"><strong>شبکه باران</strong></div>
         </a>
     </div>
     <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
         <a title="semnan" href="/player/semnan">
             <img src="https://static.televebion.net/web/images/../content_images/channel_images/thumbs/new/240/v4/semnan.png"
                  alt="سمنان">
-            <div class="card-body"> پخش زنده <br><strong>شبکه سمنان</strong></div>
+            <div class="card-body"><strong>شبکه سمنان</strong></div>
         </a>
     </div>
     <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
         <a title="aftab" href="/player/aftab">
             <img src="https://static.televebion.net/web/images/../content_images/channel_images/thumbs/new/240/v4/aftab.png"
                  alt="آفتاب">
-            <div class="card-body"> پخش زنده <br><strong>شبکه آفتاب</strong></div>
+            <div class="card-body"><strong>شبکه آفتاب</strong></div>
         </a>
     </div>
     <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
         <a title="aflak" href="/player/aflak">
             <img src="https://static.televebion.net/web/images/../content_images/channel_images/thumbs/new/240/v4/aflak.png"
                  alt="افلاک">
-            <div class="card-body"> پخش زنده <br><strong>شبکه افلاک</strong></div>
+            <div class="card-body"><strong>شبکه افلاک</strong></div>
         </a>
     </div>
     <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
-        <a title="ifilmAr" href="/player/manoto">
+        <a title="manoto" href="/player/manoto">
             <img src="https://www.manototv.com/Content/Images/manoto-logo-0cb2b7.png"
-                 alt="iFilm Arabic"
+                 alt="manoto"
                  width="130px" vspace="53px">
-            <div class="card-body"> پخش زنده <br><strong>شبکه من و تو</strong></div>
+            <div class="card-body"><strong>شبکه من و تو</strong></div>
         </a>
     </div>
     <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
-        <a title="ifilmAr" href="/player/bbc">
+        <a title="bbc" href="/player/bbc">
             <img src="https://nav.files.bbci.co.uk/orbit/2.0.0-522.0b452914/img/blq-orbit-blocks_grey.svg"
-                 alt="iFilm Arabic"
-                 width="130px" vspace="46px">
-            <div class="card-body"> پخش زنده <br><strong>شبکه BBC</strong></div>
+                 alt="BBC"
+                 width="130px" vspace="47px">
+            <div class="card-body"><strong>BBC شبکه</strong></div>
+        </a>
+    </div>
+    <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
+        <a title="radiojavan" href="/player/radiojavan">
+            <img src="https://www.radiojavan.com/images/nav_logo.png"
+                 alt="Radio Javan"
+                 width="130px" vspace="55px">
+            <div class="card-body"><strong>رادیو جوان</strong></div>
         </a>
     </div>
 </div>
