Remove some dependencies and add order

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,7 +16,33 @@
             crossorigin="anonymous"></script>
 </head>
 <body>
-<div class="container-float" style="width: 100%;">
+<div class="container float-right">
+    <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
+        <a title="manoto" href="/player/manoto">
+            <img src="https://www.manototv.com/Content/Images/manoto-logo-0cb2b7.png"
+                 alt="manoto"
+                 width="130px" vspace="54px">
+            <div class="card-body"><strong>شبکه من و تو</strong></div>
+        </a>
+    </div>
+    <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
+        <a title="bbc" href="/player/bbc">
+            <img src="https://nav.files.bbci.co.uk/orbit/2.0.0-522.0b452914/img/blq-orbit-blocks_grey.svg"
+                 alt="BBC"
+                 width="130px" vspace="47px">
+            <div class="card-body"><strong>BBC شبکه</strong></div>
+        </a>
+    </div>
+    <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
+        <a title="radiojavan" href="/player/radiojavan">
+            <img src="https://www.radiojavan.com/images/nav_logo.png"
+                 alt="Radio Javan"
+                 width="130px" vspace="55px">
+            <div class="card-body"><strong>رادیو جوان</strong></div>
+        </a>
+    </div>
+</div>
+<div class="container float-right">
     <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
         <a title="tv1" href="/player/tv1">
             <img src="https://static.televebion.net/web/images/../content_images/channel_images/thumbs/new/240/v4/tv1.png"
@@ -260,30 +286,6 @@
             <img src="https://static.televebion.net/web/images/../content_images/channel_images/thumbs/new/240/v4/aflak.png"
                  alt="افلاک">
             <div class="card-body"><strong>شبکه افلاک</strong></div>
-        </a>
-    </div>
-    <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
-        <a title="manoto" href="/player/manoto">
-            <img src="https://www.manototv.com/Content/Images/manoto-logo-0cb2b7.png"
-                 alt="manoto"
-                 width="130px" vspace="53px">
-            <div class="card-body"><strong>شبکه من و تو</strong></div>
-        </a>
-    </div>
-    <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
-        <a title="bbc" href="/player/bbc">
-            <img src="https://nav.files.bbci.co.uk/orbit/2.0.0-522.0b452914/img/blq-orbit-blocks_grey.svg"
-                 alt="BBC"
-                 width="130px" vspace="47px">
-            <div class="card-body"><strong>BBC شبکه</strong></div>
-        </a>
-    </div>
-    <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
-        <a title="radiojavan" href="/player/radiojavan">
-            <img src="https://www.radiojavan.com/images/nav_logo.png"
-                 alt="Radio Javan"
-                 width="130px" vspace="55px">
-            <div class="card-body"><strong>رادیو جوان</strong></div>
         </a>
     </div>
 </div>
