Add channel logos

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -281,13 +281,13 @@
             <div class="card-body"><strong>شبکه آفتاب</strong></div>
         </a>
     </div>
-    <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
-        <a title="aflak" href="/player/aflak">
-            <img src="https://static.televebion.net/web/images/../content_images/channel_images/thumbs/new/240/v4/aflak.png"
-                 alt="افلاک">
-            <div class="card-body"><strong>شبکه افلاک</strong></div>
-        </a>
-    </div>
+    <!--<div class="card float-right" style="width: 140px; margin: 5px; background: black;">-->
+        <!--<a title="aflak" href="/player/aflak">-->
+            <!--<img src="https://static.televebion.net/web/images/../content_images/channel_images/thumbs/new/240/v4/aflak.png"-->
+                 <!--alt="افلاک">-->
+            <!--<div class="card-body"><strong>شبکه افلاک</strong></div>-->
+        <!--</a>-->
+    <!--</div>-->
 </div>
 </body>
 </html>
