Make first page responsive

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IRAN TVs</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap-responsive.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
             integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -16,7 +19,7 @@
             crossorigin="anonymous"></script>
 </head>
 <body>
-<div class="container float-right">
+<div class="float-right">
     <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
         <a title="manoto" href="/player/manoto">
             <img src="https://www.manototv.com/Content/Images/manoto-logo-0cb2b7.png"
@@ -42,7 +45,7 @@
         </a>
     </div>
 </div>
-<div class="container float-right">
+<div class="float-right">
     <div class="card float-right" style="width: 140px; margin: 5px; background: black;">
         <a title="tv1" href="/player/tv1">
             <img src="https://static.televebion.net/web/images/../content_images/channel_images/thumbs/new/240/v4/tv1.png"
